# molecular_prediction

./: project_report.ipynb  pyproject.toml  readme.md
src/: app_baseline.py  app_transformer.py  check_sklearn.py  hyperparameter_search_gnn.py  hyperparameter_search_transformer.py  test_baseline.py  test_gnn.py  test_transformer.py  train_baseline_fixed.py  train_gnn.py  train_transformer.py  utils.py
src/gnn/: dataset.py  model.py
src/mlruns/0/: meta.yaml
src/transformer/: dataset.py  model.py  model_rope.py
