[project]
name = "enzyme_inhibition_prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.0",
    "fsspec>=2024.12.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "mlflow>=2.20.2",
    "numpy>=2.2.3",
    "optuna>=4.2.1",
    "pandas>=2.2.3",
    "rdkit>=2024.9.5",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "torch-geometric>=2.6.1",
    "torchao>=0.8.0",
    "torchaudio>=2.6.0",
    "torchtune>=0.5.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
]
